Start to create first view template to format post list

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,25 @@
 <html class="h-100">
 
 <head>
-    <title>CodeStar Blog</title>
-
+     <!-- TITLE -->
+    <title>Symphony Blog</title>
+    <!-- META -->
+    <meta name="description"
+        content="This is a classical music blog where you will find in-depth articles about all kinds of classical music related topics.">
+    <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
@@ -26,32 +33,38 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">c<span class="red-o">o</span>de<span
-                        class="thin">|star</span></span></span></a>
+            <!-- Brand -->
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">symphony</span></a>
+            <!-- Toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!-- Home link -->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     {% if user.is_authenticated %}
+                    <!-- Logout link -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Logout</a>
                     </li>
                     {% else %}
+                     <!-- Sign Up link -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Register</a>
                     </li>
+                    <!-- Login link -->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
                     </li>
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
-                    adventures of a software developer
+                    Welcome to the world of classical music
                 </span>
             </div>
         </div>
