--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,17 @@
 
 <div class="container-fluid">
     <div class="row">
-
+        <!-- Home page heading -->
+        <h4 class="text-center blog-heading">Classical Music Blog</h4>
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
+                <!-- Display a card for each post in the post_list -->
             {% for post in post_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
+                            <!-- Display the post's featured image -->
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
@@ -23,16 +26,21 @@
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
                             </div>
+                            <!-- Link to the post detail page -->
                             <a href="#" class="post-link">
+                                <!-- Display the post's title -->
                                 <h2 class="card-title">{{ post.title }}</h2>
+                                <!-- Display the post's excerpt -->
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
+                             <!-- Display the post's creation date, and number of likes -->
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
                                 {{ post.number_of_likes }}</p>
                         </div>
                     </div>
                 </div>
+                 <!-- Insert a new row after every three posts -->
             {% if forloop.counter|divisibleby:3 %}
             </div>
             <div class="row">
@@ -41,13 +49,17 @@
 
             </div>
         </div>
+        <!-- Blog entries column ends here -->
     </div>
+    <!-- Navigation links for paginated results -->
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
+            <!-- Link to the previous page of results -->
             {% if page_obj.has_previous %}
             <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
             {% endif %}
+            <!-- Link to the next page of results -->
             {% if page_obj.has_next %}
             <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
 
