--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">symphony</span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Symphony</span></a>
             <!-- Toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
