--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                     {% if user.is_authenticated %}
                     <!-- Logout link -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
                      <!-- Sign Up link -->
