Wire up the account Register link in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                     {% else %}
                      <!-- Sign Up link -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <!-- Login link -->
                     <li class="nav-item">
