--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                     </li>
                     <!-- Login link -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
                 </ul>
