Modify logout.html and sign up form in signup.html

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,10 +12,10 @@
     <div class="col-md-8 mt-3 offset-md-2">
         <h3>{% trans "Sign In" %}</h3>
 
-        <p>{% blocktrans %}Welcome back to Symphony!
-        To leave a comment or like a post, please log in. If you
+        <p>{% blocktrans %}Welcome back to <strong>Symphony</strong>.
+        To leave a comment or like a post, then please log in first. If you
         haven't created an account yet, then 
-        <a href="{{ signup_url }}">Sign Up</a> first.{% endblocktrans %}</p>
+        <a href="{{ signup_url }}">Sign Up</a>. {% endblocktrans %}</p>
     </div>
   </div>
   <div class="row">
