Modify Sign Up button in signup.html file

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -23,7 +23,7 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="btn-btn-signup right">{% trans "Sign Up" %} &raquo;</button>
+          <button type="btn-btn-signup right">{% trans "Sign Up" %}</button>
       </form>
     </div>
   </div>
