--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -36,7 +36,7 @@
 
                     <div class="col-1">
                         <strong>
-                            {% if user is authenticated %}
+                            {% if user.is authenticated %}
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
                                 {% csrf_token %}
                                 
@@ -48,6 +48,7 @@
 
                                 <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i 
                                         class="far fa-heart"></i></button>
+                                {% endif %}
                             </form>
                             {% else %}
                             <span class="text-secondary"><i class="far fa-heart"></i></span>
