--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,15 +2,15 @@ body {
     background-color: #F9FAFC;
 }
 
-.brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #4A4A4F;
+h2 {
+    font-family: Gentium Book Plus, serif;
 }
 
-.red-o {
-    color: #E84610;
+.brand {
+    font-family: Mea Culpa, sans-serif;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #1a1a1a;
 }
 
 .thin {
@@ -29,6 +29,10 @@ body {
     background-color: #F9FAFC;
 }
 
+.navbar {
+    font-family: Roboto Slab, serif;
+}
+
 .card {
     border: none;
     background-color: transparent;
@@ -38,32 +42,18 @@ body {
     position: relative;
 }
 
-.image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #23BBBB;
-}
-
-.author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
-}
-
 .masthead {
-    margin-top: 10px;
+    margin-top: 30px;
     overflow: hidden;
     position: relative;
     display: inline-block;
-    height: 33vh;
+    height: 43vh;
     width: 100%;
 }
 
 .masthead-text {
-    background-color: #445261;
-    color: white;
+    background-color: #1a1a1a;
+    color: #fff;
     position: relative;
 }
 
@@ -79,25 +69,25 @@ body {
     right: 90%;
     height: 100%;
     width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
+    background: #1a1a1a;
+    -webkit-transform: skew(20deg);
+    -moz-transform: skew(20deg);
+    transform: skew(20deg);
     z-index: 100;
 }
 
 .post-link {
     text-decoration: none;
-    color: #445261;
+    color: #1a1a1a;
 }
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #6b6b6b;
 }
 
 .post-title {
-    margin-top: 20%;
+    margin-top: 15%;
     margin-left: 5%;
 }
 
@@ -139,4 +129,8 @@ body {
     color: #E84610;
     background: transparent;
     border: none;
+}
+
+.footer {
+    background-color: #1a1a1a;   
 }
