--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,10 @@
     <meta name="description"
         content="This is a classical music blog where you will find in-depth articles about all kinds of classical music related topics.">
     <!-- GOOGLE FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,6 +68,9 @@
             </div>
         </div>
     </nav>
+    <!-- Navigation end -->
+
+    <!-- Display alert messages at the top of the page -->
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -81,6 +83,7 @@
             </div>
         </div>
     </div>
+    <!-- Alert message End -->
 
 
     <main class="flex-shrink-0 main-bg">
@@ -91,11 +94,14 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Code Instituters</p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+        <!-- Copyright -->
+            <p class="m-0 text-center text-white small">Copyright &copy; Symphony Blog</p>
+        <!-- Social media section --> 
+            <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
             <i class="fab fa-youtube-square ms-3"></i></p>
+                        
     </footer>
     <script>
         setTimeout(function () {
