--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 {% load crispy_forms_tags %}
 
@@ -14,7 +16,7 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" width="100%">
+                <img src="https://res.cloudinary.com/dknrw7o4k/image/upload/v1676659076/gffb2e097174332d8b43835ed74ae5800008005cce87b0e1dc9dbc9fd286a032852e03329a4a1562b93516e1b6ae4cb6580f9f36d877c3df16ad8a3fc41bfca42daa40db74f3d6ecf9e5d4d653992a756_640_w4hg4t.jpg" width="100%">
                 {% else %}
                 <img src=" {{ post.featured_image.url }}" width="100%">
                 {% endif %}
