--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
-                <!-- Post title goes in these h1 tags -->
+                <!-- Post title goes in these h2 tags -->
                 <h2 class="post-title">{{ post.title }}</h2>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
@@ -31,7 +31,7 @@
         <div class="col-xl-4 offset-xl-8">
             <a href="{% url 'update_post' post.slug %}" class="btn btn-signup m-1"><i class="fa fa-edit"></i> Update
                 this post</a>
-            <button type="button" class="btn btn-del m-1" data-toggle="modal" data-target="#postModal"><i
+            <button type="button" class="btn btn-del m-1" data-bs-toggle="modal" data-bs-target="#postModal"><i
                     class="fa fa-trash"></i> Delete this post</button>
         </div>
     </div>
@@ -128,6 +128,29 @@
                 </form>
                 {% endif %}
                 {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="postModalLabel">Are you sure you want to delete this post?</h5>
+                <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-xmark"></i></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>{{ post.title }}</p>
+                <p>{{ post.author }} | {{ post.created_on }}</p>
+            </div>
+            <div class="modal-footer">
+                <form action="{% url 'post_delete' post.slug %}" method="POST" class="d-inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-del">Delete</button>
+                </form>
+                 <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
