Modify background color and color of page-link button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,6 +152,17 @@ h2 {
     color:#1a1a1a;
 }
 
+.page-link {
+    background-color: #1a1a1a;
+    color: #F9FAFC;
+}
+
+.page-link:hover {
+    background-color: #F9FAFC;
+    color: #1a1a1a;
+    border: none;
+}
+
 .footer {
     background-color: #1a1a1a;   
 }
