--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             {% endif %}
             <!-- Link to the next page of results -->
             {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo; NEXT</a></li>
 
             {% endif %}
         </ul>
