--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Symphony</span></a>
