--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,10 @@ h2 {
     text-decoration-color: #F9FAFC;
 }
 
+.navbar-brand {
+    color:#F9FAFC;
+}
+
 .card {
     border: none;
     background-color: transparent;
