--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Symphony</span></a>
@@ -108,7 +108,7 @@
             let messages = document.getElementById('msg');
             let alert = new bootstrap.Alert(messages);
             alert.close();
-        }, 3000);
+        }, 2500);
     </script>
 </body>
 
