Add contributor model table to ReadMe file

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,6 @@
 
     <div class="row">
         <!-- About page heading -->
-        <h2 class="text-center blog-heading">About Symphony</h2>
+        <h2 class="text-center blog-heading">About <span class="brand">Symphony</span></h2>
         <div class="col-md-4 mx-auto">
-            <h4 class="text-center">Welcome to <strong>sonictones!</strong></h4>
+            <h4 class="text-center">Our mission <strong></strong></h4>
