--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,10 @@
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
+                    <!-- About link -->
+                    <li class="nav-item">
+                        <a class="nav-link link-secondary" href="{% url 'about' %}">About</a>
+                    </li>
                 </ul>
                 <span class="navbar-text text-muted">
                     Welcome to the world of classical music
