Work on about us page and ReadMe File

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                     {% endif %}
                     <!-- About link -->
                     <li class="nav-item">
-                        <a class="nav-link link-secondary" href="{% url 'about' %}">About</a>
+                        <a class="nav-link link-secondary" href="{% url 'aboutus' %}">About Us</a>
                     </li>
                 </ul>
                 <span class="navbar-text text-muted">
