--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,29 +4,22 @@
 <!-- Check this for loop and how you access the objects data -->
         <div class="row">
             <!-- About page heading -->
-            <h2 class="text-center blog-heading">About Us</h2><br><br>
-            <div class="col-md-4 mx-auto">
+            <h2 class="text-center blog-heading">About Us</h2><br>
                 {% for contributor in contributor_list %}
                 <div class="col-md-4">
-                    <div class="card-mb-4">
-                        <div class="card-body">
+                    <div class="card-mb-4"> 
+                        <div class="card-body"> 
+                            <h4 class="contributor-name"><strong>{{contributor.name}}</strong></h4>
                             <div class="image-container">
-                                {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top"
-                                    src="https://res.cloudinary.com/dknrw7o4k/image/upload/v1676659076/gffb2e097174332d8b43835ed74ae5800008005cce87b0e1dc9dbc9fd286a032852e03329a4a1562b93516e1b6ae4cb6580f9f36d877c3df16ad8a3fc41bfca42daa40db74f3d6ecf9e5d4d653992a756_640_w4hg4t.jpg">
-                                {% else %}
-                                <img class="card-img-top" src="{{ post.featured_image.url }}">
-                                {% endif %}
+                                <img class="contributor-photo card-img-top" src="{{ contributor.photo.url }}">
                             </div>
                         </div>
                     </div>
-                </div>
-                {% if forloop.counter|divisibleby:3 %}
-                <h2 class="text-center">{{contributor.name}}</h2>
+                </div> 
                 </div>
                 <div class="row">
-                {% endif %}
-                
+                <div class="contributor-bio">{{contributor.bio|safe}}</div>
+                </div>
                 {% endfor %}
 
 {%endblock%}
