--- a/templates/base.html
+++ b/templates/base.html
@@ -107,10 +107,10 @@
         <!-- Copyright -->
             <p class="m-0 text-center text-white small">Copyright &copy; Symphony Blog</p>
         <!-- Social media section --> 
-            <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i></p>
+            <p class="m-0 text-center text-white">Follow us: <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-square ms-3"></i></a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter-square ms-3"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram-square ms-3"></a></i>
+            <a href="https://www.youtube.com" target="_blank" aria-label="Youtube"><i class="fa-youtube-square ms-3"></i></a>
                         
     </footer>
     <script>
