--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,8 +1,4 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-{% load crispy_forms_tags %}
+{% extends 'base.html' %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="masthead">
     <div class="container">
@@ -16,9 +12,12 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://res.cloudinary.com/dknrw7o4k/image/upload/v1676659076/gffb2e097174332d8b43835ed74ae5800008005cce87b0e1dc9dbc9fd286a032852e03329a4a1562b93516e1b6ae4cb6580f9f36d877c3df16ad8a3fc41bfca42daa40db74f3d6ecf9e5d4d653992a756_640_w4hg4t.jpg" width="100%">
+                <img
+                    src="https://res.cloudinary.com/dknrw7o4k/image/upload/v1676659076/gffb2e097174332d8b43835ed74ae5800008005cce87b0e1dc9dbc9fd286a032852e03329a4a1562b93516e1b6ae4cb6580f9f36d877c3df16ad8a3fc41bfca42daa40db74f3d6ecf9e5d4d653992a756_640_w4hg4t.jpg"
+                    width="100%"
+                />
                 {% else %}
-                <img src=" {{ post.featured_image.url }}" width="100%">
+                <img src=" {{ post.featured_image.url }}" width="100%" />
                 {% endif %}
             </div>
         </div>
@@ -29,10 +28,8 @@
 <div class="container">
     <div class="row">
         <div class="col-xl-4 offset-xl-8">
-            <a href="{% url 'update_post' post.slug %}" class="btn btn-signup m-1"><i class="fa fa-edit"></i> Update
-                this post</a>
-            <button type="button" class="btn btn-del m-1" data-bs-toggle="modal" data-bs-target="#postModal"><i
-                    class="fa fa-trash"></i> Delete this post</button>
+            <a href="{% url 'update_post' post.slug %}" class="btn btn-signup m-1"><i class="fa fa-edit"></i> Update this post</a>
+            <button type="button" class="btn btn-del m-1" data-bs-toggle="modal" data-bs-target="#postModal"><i class="fa fa-trash"></i> Delete this post</button>
         </div>
     </div>
 </div>
@@ -44,25 +41,20 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text ">
+                <p class="card-text">
                     {{ post.content | safe }}
                 </p>
                 <div class="row">
-
                     <div class="col-1">
                         <strong>
                             {% if user.is_authenticated %}
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-                                {% csrf_token %}
-                                
-                                {% if liked %}
+                                {% csrf_token %} {% if liked %}
 
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i 
-                                        class="fas fa-heart"></i></button>
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="fas fa-heart"></i></button>
                                 {% else %}
 
-                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i 
-                                        class="far fa-heart"></i></button>
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="far fa-heart"></i></button>
                                 {% endif %}
                             </form>
                             {% else %}
@@ -73,9 +65,11 @@
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
-                        <strong class="text-secondary"><i class="far fa-comments"></i>
+                        <strong class="text-secondary">
+                            <i class="far fa-comments"></i>
                             <!-- Our total_comments variable goes before the closing strong tag -->
-                            {{ total_comments }}</strong>
+                            {{ total_comments }}
+                        </strong>
                         {% endwith %}
                     </div>
                 </div>
@@ -84,11 +78,11 @@
     </div>
     <div class="row">
         <div class="col">
-            <hr>
+            <hr />
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 ">
+        <div class="col-md-8 card mb-4 mt-3">
             <h3>Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the tags to iterate through each comment in comments -->
@@ -97,10 +91,11 @@
                     <p class="font-weight-bold">
                         <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
                         {{ comment.name }}
-                        <span class=" text-muted font-weight-normal">
+                        <span class="text-muted font-weight-normal">
                             <!-- The comment's created date goes here -->
                             {{ comment.created_on }}
-                        </span> wrote:
+                        </span>
+                        wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
                     {{ comment.body | linebreaks }}
@@ -109,25 +104,22 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4 card mb-4  mt-3 ">
+        <div class="col-md-4 card mb-4 mt-3">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
                 <div class="alert alert-success" role="alert">
                     Your comment is awaiting approval
                 </div>
-                {% else %}
-                {% if user.is_authenticated %}
+                {% else %} {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
                 <p>Posting as: {{ user.username }}</p>
                 <form method="post" style="margin-top: 1.3em;">
-                    {{ comment_form | crispy }}
-                    {% csrf_token %}
+                    {{ comment_form | crispy }} {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
-                {% endif %}
-                {% endif %}
+                {% endif %} {% endif %}
             </div>
         </div>
     </div>
@@ -150,7 +142,7 @@
                     {% csrf_token %}
                     <button type="submit" class="btn btn-del">Delete</button>
                 </form>
-                 <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
