--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                                 <!-- Display the post's excerpt -->
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
-                            <!-- Display the post's creation date, and number of likes -->
+                            <!-- Display the post's author, creation date, and number of likes -->
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i> {{ post.number_of_likes }}</p>
                         </div>
