--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,13 +4,13 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
-                <!-- Post title goes in these h2 tags -->
+                <!-- Display the post title -->
                 <h2 class="post-title">{{ post.title }}</h2>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <!-- The featured image URL goes in the src attribute -->
+                <!-- Display the post's featured image -->
                 {% if "placeholder" in post.featured_image.url %}
                 <img
                     src="https://res.cloudinary.com/dknrw7o4k/image/upload/v1676659076/gffb2e097174332d8b43835ed74ae5800008005cce87b0e1dc9dbc9fd286a032852e03329a4a1562b93516e1b6ae4cb6580f9f36d877c3df16ad8a3fc41bfca42daa40db74f3d6ecf9e5d4d653992a756_640_w4hg4t.jpg"
@@ -27,8 +27,10 @@
 {% if request.user == post.author %}
 <div class="container">
     <div class="row">
+        <!-- Update this post button -->
         <div class="col-xl-4 offset-xl-8">
             <a href="{% url 'update_post' post.slug %}" class="btn btn-signup m-1"><i class="fa fa-edit"></i> Update this post</a>
+        <!-- Delete this post button -->
             <button type="button" class="btn btn-del m-1" data-bs-toggle="modal" data-bs-target="#postModal"><i class="fa fa-trash"></i> Delete this post</button>
         </div>
     </div>
@@ -38,15 +40,15 @@
 <div class="container">
     <div class="row">
         <div class="col card mb-4 mt-3 left top">
+            <!-- Display the post's content -->
             <div class="card-body">
-                <!-- The post content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text">
                     {{ post.content | safe }}
                 </p>
                 <div class="row">
                     <div class="col-1">
                         <strong>
+                            <!-- Like button for registered users -->
                             {% if user.is_authenticated %}
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
                                 {% csrf_token %} {% if liked %}
@@ -57,17 +59,20 @@
                                 <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i class="far fa-heart"></i></button>
                                 {% endif %}
                             </form>
+                            <!-- Like button for unregistered users-->
                             {% else %}
                             <span class="text-secondary"><i class="far fa-heart"></i></span>
                             {% endif %}
+                            <!-- Display the number of likes for the post -->
                             <span class="text-secondary">{{ post.number_of_likes }}</span>
                         </strong>
                     </div>
                     <div class="col-1">
+                        <!-- Display the number of comments for the post -->
                         {% with comments.count as total_comments %}
                         <strong class="text-secondary">
                             <i class="far fa-comments"></i>
-                            <!-- Our total_comments variable goes before the closing strong tag -->
+                            <!-- Total comments for the post -->
                             {{ total_comments }}
                         </strong>
                         {% endwith %}
@@ -76,6 +81,7 @@
             </div>
         </div>
     </div>
+    <!-- Horizontal line separates the post from the comments -->
     <div class="row">
         <div class="col">
             <hr />
@@ -83,35 +89,37 @@
     </div>
     <div class="row">
         <div class="col-md-8 card mb-4 mt-3">
+            <!-- Comments section heading -->
             <h3>Comments:</h3>
             <div class="card-body">
-                <!-- We want a for loop inside the tags to iterate through each comment in comments -->
+                <!-- Display each individual comment -->
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
+                    <!-- Display the comment's author -->
                     <p class="font-weight-bold">
-                        <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
                         {{ comment.name }}
                         <span class="text-muted font-weight-normal">
-                            <!-- The comment's created date goes here -->
+                            <!-- Display the date the comment was created on -->
                             {{ comment.created_on }}
                         </span>
                         wrote:
                     </p>
-                    <!-- The body of the comment goes before the | -->
+                    <!-- Display the comment's content -->
                     {{ comment.body | linebreaks }}
                 </div>
-                <!-- Our for loop ends here -->
                 {% endfor %}
             </div>
         </div>
         <div class="col-md-4 card mb-4 mt-3">
             <div class="card-body">
-                <!-- For later -->
                 {% if commented %}
+                <!-- Alert message to the user that the comment is awaiting approval -->
                 <div class="alert alert-success" role="alert">
                     Your comment is awaiting approval
                 </div>
-                {% else %} {% if user.is_authenticated %}
+                {% else %}
+                <!-- Comment for for registered users -->
+                {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
                 <p>Posting as: {{ user.username }}</p>
@@ -124,6 +132,7 @@
         </div>
     </div>
 </div>
+<!-- Alert modal for user - Are you sure you want to delete this post? -->
 <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
@@ -140,8 +149,10 @@
             <div class="modal-footer">
                 <form action="{% url 'post_delete' post.slug %}" method="POST" class="d-inline">
                     {% csrf_token %}
+                    <!-- Modal delete button-->
                     <button type="submit" class="btn btn-del">Delete</button>
                 </form>
+                <!-- Modal close button -->
                 <button type="button" class="btn btn-sec" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
